Initial first version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uniswap/universal-router-sdk",
+  "name": "@miljan9602/universal-router-sdk",
   "version": "1.6.0",
   "description": "sdk for integrating with the Universal Router contracts",
   "main": "dist/index.js",
@@ -50,10 +50,10 @@
   },
   "dependencies": {
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/router-sdk": "^1.6.0",
     "@uniswap/sdk-core": "^4.0.0",
     "@uniswap/universal-router": "1.6.0",
-    "@uniswap/v2-sdk": "^3.2.0",
+    "@miljan9602/router-sdk": "^1.7.1",
+    "@miljan9602/v2-sdk": "^5.0.2",
     "@uniswap/v3-sdk": "^3.10.0",
     "bignumber.js": "^9.0.2",
     "ethers": "^5.3.1"
