--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@miljan9602/universal-router-sdk",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "sdk for integrating with the Universal Router contracts",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -50,11 +50,12 @@
   },
   "dependencies": {
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/sdk-core": "^4.0.0",
     "@uniswap/universal-router": "1.6.0",
-    "@miljan9602/router-sdk": "^1.7.1",
+    "@miljan9602/router-sdk": "^1.7.3",
     "@miljan9602/v2-sdk": "^5.0.2",
-    "@uniswap/v3-sdk": "^3.10.0",
+    "@miljan9602/sdk-core": "^4.0.10",
+    "@miljan9602/v3-sdk": "^3.10.0",
+
     "bignumber.js": "^9.0.2",
     "ethers": "^5.3.1"
   },
